# AOWIS-SERVER-Standalone

./: .gitmodules  CMakeLists.txt  README.md  compile_linux.sh  compile_macos.sh  compile_windows.sh  git_submodule_update.sh
tools/qt-macos/: Dockerfile.qt-macos  build_macos_inside_container.sh  docker_build.sh
tools/qt-windows/: Dockerfile.qt-windows  build_windows_inside_container.sh  docker_build.sh
